Shopping cart - add bouquet displaying, add missing functions and service logic

--- a/src/app/modules/products/bouquet/bouquet.component.html
+++ b/src/app/modules/products/bouquet/bouquet.component.html
@@ -1,19 +1,127 @@
 <div class="container">
-  Coming soon.
-  <div class="row products-row" *ngFor="let row of viewModel;">
+  <div>
+    <ngb-pagination
+      class="d-flex justify-content-center"
+      size="lg"
+      [(page)]="page"
+      [pageSize]="pageSize"
+      [maxSize]="5"
+      [rotate]="true"
+      [ellipses]="false"
+      [collectionSize]="collectionSize"
+      (pageChange)="onPageChange(page)"
+    ></ngb-pagination>
+  </div>
 
-      <div class="card products-column" style="width: 18rem;" *ngFor="let product of row;" >
-        <img class="card-img-top" src="https://images.pexels.com/photos/60597/dahlia-red-blossom-bloom-60597.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="Card image cap">
-        <div class="card-body">
-          <h5 class="card-title">{{product.name}}</h5>
-          <p class="card-text">Some quick example text </p>
+  <div class="row justify-content-center" *ngIf="!resourcesLoaded">
+    <div
+      class="spinner-border text-success"
+      role="status"
+      style="width: 10rem; height: 10rem;"
+    >
+      <span class="sr-only">Loading...</span>
+    </div>
+  </div>
+
+  <div class="product-content" *ngIf="resourcesLoaded">
+    <div class="card-deck" *ngFor="let row of viewModel; let rowIndex = index">
+      <div
+        class="card border-success"
+        *ngFor="let product of row; let columnIndex = index"
+      >
+        <div>
+          <div
+            class="card-img-top"
+            class="row justify-content-center"
+            *ngIf="
+              !isImageLoaded(
+                imagesLoaded,
+                rowIndex * elemntsInRow + columnIndex,
+                pageSize
+              )
+            "
+          >
+            <div
+              class="spinner-border text-success"
+              role="status"
+              style="width: 10rem; height: 10rem;"
+            >
+              <span class="sr-only">Loading...</span>
+            </div>
+          </div>
+          <img
+            class="card-img-top"
+            src="{{ product.imageMedium }}"
+            alt="Image Product"
+            [hidden]="
+              !isImageLoaded(
+                imagesLoaded,
+                rowIndex * elemntsInRow + columnIndex,
+                pageSize
+              )
+            "
+            (load)="
+              onImageLoad(
+                imagesLoaded,
+                pageSize,
+                rowIndex * elemntsInRow + columnIndex
+              )
+            "
+          />
         </div>
-        <ul class="list-group list-group-flush">
-          <li class="list-group-item">{{product.id}}</li>
-        </ul>
-        <div class="card-body">
-          <a href="#" class="card-link">Link</a>
+        <div class="card-header">
+          <h5 class="card-title">{{ product.name }}</h5>
+          <p class="card-text card-under-title">
+            <small class="text-muted">ID: {{ product.id }} </small>
+          </p>
+        </div>
+        <div class="card-body bg-transparent border-success">
+          <p class="card-text text-justify">Contains:</p>
+          <ul class="product-content-list card-text text-justify">
+            <li *ngFor="let flower of product.bouquetFlowerList">
+              <img src="{{ flower.flowerDTO.imageSmall }}" />
+              {{ flower.itemCount }}x
+              {{ flower.flowerDTO.name }}
+            </li>
+          </ul>
+          <ul class="product-content-list card-text text-justify">
+            <li *ngFor="let addon of product.bouquetAddonList">
+              <img src="{{ addon.addonDTO.imageSmall }}" />
+              {{ addon.addonDTO.colour }}
+              {{ addon.addonDTO.name }}
+            </li>
+          </ul>
+        </div>
+        <div class="card-body bg-transparent border-success">
+          <p class="card-text">{{ product.description }}</p>
+        </div>
+        <div class="card-footer bg-transparent border-success">
+          <p class="price float-left card-text">
+            {{ product.totalPrice.amount }} {{ product.totalPrice.currency }}
+          </p>
+          <button
+            type="button"
+            class="btn btn-success float-right card-text"
+            *ngIf="authenticationGuard.isAuthenticated()"
+            (click)="addToShoppingCart(product.id)"
+          >
+            Add to cart
+          </button>
         </div>
       </div>
+    </div>
+    <div>
+      <ngb-pagination
+        class="d-flex justify-content-center"
+        size="lg"
+        [(page)]="page"
+        [pageSize]="pageSize"
+        [maxSize]="5"
+        [rotate]="true"
+        [ellipses]="false"
+        [collectionSize]="collectionSize"
+        (pageChange)="onPageChange(page)"
+      ></ngb-pagination>
+    </div>
   </div>
 </div>
